	PR c++/28058 	* pt.c (register_specialization): Return error_mark_node for 	specialization-after-instantiation. 	* decl2.c (mark_used): Mark the main function used when one of its 	clones is used.

PR c++/28058
	* g++.dg/template/spec31.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@116491 138bc75d-0d04-0410-961f-82ee72b054a4